# nirimod

./: .gitignore  CONTRIBUTING.md  README.md  flake.nix  install.sh  package.nix  pyproject.toml
nirimod/: __main__.py  app_settings.py  kdl_parser.py  niri_ipc.py  profiles.py  state.py  theme.py  updater.py  window.py  window_effects.py  xkb_helper.py
nirimod/pages/: animations.py  appearance.py  base.py  bindings.py  environment.py  gestures.py  input_page.py  keyboard.py  layout.py  mouse.py  outputs.py  raw_config.py  startup.py  window_rules.py  workspaces.py
nirimod/widgets/: __init__.py  keyboard_visualizer.py
tests/: test_features.py  test_ipc.py  test_kdl_parser.py  test_state.py  test_updater.py  test_window_effects.py  test_window_rules.py
